<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2014 Izan Rodrigo
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:background="?colorPrimary">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <com.welbits.izanrodrigo.emptyview.library.EmptyView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.melnykov.fab.ObservableScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/moviePoster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"/>

                    <TextView
                        style="@style/MovieDetailText.Title"
                        android:text="@string/director"/>

                    <TextView
                        style="@style/MovieDetailText.Body"
                        android:id="@+id/movieDirector"/>

                    <TextView
                        style="@style/MovieDetailText.Title"
                        android:text="@string/cast"/>

                    <TextView
                        style="@style/MovieDetailText.Body"
                        android:id="@+id/movieActors"/>

                    <TextView
                        style="@style/MovieDetailText.Title"
                        android:text="@string/genre"/>

                    <TextView
                        style="@style/MovieDetailText.Body"
                        android:id="@+id/movieGender"/>

                    <TextView
                        style="@style/MovieDetailText.Title"
                        android:text="@string/length"/>

                    <TextView
                        style="@style/MovieDetailText.Body"
                        android:id="@+id/movieLength"/>

                    <TextView
                        style="@style/MovieDetailText.Title"
                        android:text="@string/synopsis"/>

                    <TextView
                        style="@style/MovieDetailText.Body"
                        android:id="@+id/movieSynopsis"
                        android:paddingBottom="10dp"/>

                </LinearLayout>

            </com.melnykov.fab.ObservableScrollView>

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/trailerFAB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="16dp"
                android:src="@drawable/ic_action_play"
                fab:fab_colorNormal="?colorPrimary"
                fab:fab_colorPressed="?colorPrimaryDark"
                fab:fab_colorRipple="?colorAccent"/>

        </RelativeLayout>

    </com.welbits.izanrodrigo.emptyview.library.EmptyView>

</LinearLayout>
